Fixed too big temperature

--- a/www/css/design-1.4.2.css
+++ b/www/css/design-1.4.2.css
@@ -982,7 +982,7 @@ progress  {
 }
 .nativeDroidCards > li[data-cards-type="weather"] .detail li:nth-child(2) {
 	width: 70%;
-	font-size: 115px;
+	font-size: 6em;
 	text-align: right;
 }
 
